# scoopick

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  ui_mainwindow.py
examples/: balatro.json  balatro.py  logging.py  wordle.json  wordle.py
src/scoopick/: __init__.py  __main__.py  app.py  cli.py  screenshot.py
src/scoopick/core/: __init__.py  controller.py  image.py
src/scoopick/data/: __init__.py  constants.py  point.py  schema.py
src/scoopick/model/: __init__.py  binding.py  points.py
src/scoopick/resources/: points_schema.json
src/scoopick/util/: logger.py
src/scoopick/widgets/: __init__.py  crosshair.py  point.py  points.py
tests/: test_basic.py
